# fastapi-speech

./: README.md  main.py  pyproject.toml  render.yaml
app/: main.py  requirements.txt
