[tool.poetry]
name = "fastapi-speech"
version = "0.1.0"
description = "FastAPI speech processing app"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.115.2"
uvicorn = "0.32.0"
transformers = ">=4.47.0"
torch = "2.5.0"
scipy = ">=1.14.0"
numpy = "^1.26.0"
pydantic = "2.9.2"
urllib3 = "<2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"